--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -115,13 +115,24 @@ body {
 
 .item-card {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: var(--item-card--color);
-  border: 1px solid var(--item-card--color);
+  position: relative;
+  overflow: hidden;
   border-radius: 12px;
-  padding: 15px;
+  background: var(--item-card--color);
+  border: 1px solid var(--border--color);
   box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+  transition: background 0.3s;
+}
+
+.item-content {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    width: 100%;
+    background: var(--item-card--color);
+    transition: transform 0.3s ease;
+    z-index: 1; 
 }
 
 .item-left {
@@ -138,7 +149,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: #555;
   font-weight: bold;
 }
@@ -148,28 +159,56 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2px;
+  overflow: hidden; /* กัน text overflow */
 }
 
 .item-name {
   font-weight: 600;
   font-size: 1rem;
   color: var(--text2--color);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.item-category {
-  font-size: 0.9rem;
-  color: var(--text--color);
-}
-
-.item-stock {
+.item-category, .item-stock {
   font-size: 0.85rem;
-  color: var(--text2--color);
+  color: var(--text--color);
 }
 
 .item-actions {
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.btn.edit {
+  background: var(--buttonbg--color);
+  color: #111827;
+}
+
+.btn.withdraw {
+  background: #111827;
+  color: white;
+}
+
+.delete-bg {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 90px;
+  background: rgb(247, 23, 23);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.item-card.swiped .delete-bg {
+  opacity: 1;
 }
 
 .btn {
