--- a/flask/app/static/css/pendingadmin.css
+++ b/flask/app/static/css/pendingadmin.css
@@ -348,3 +348,7 @@ input:checked + .slider:before {
     font-weight: 600;
     color: var(--text--color);
 }
+
+.text {
+    color: var(--text--color);
+}
