--- a/flask/app/templates/pending_admin.html
+++ b/flask/app/templates/pending_admin.html
@@ -47,7 +47,7 @@
                 <button type="submit" name="action" value="accept_all" class="btn btn-accept-all">Accept All</button>
             </form>
         {% else %}
-            <p>No pending users.</p>
+            <p class="text">No pending users.</p>
         {% endif %}
     </div>
 </body>
