--- a/flask/app/static/css/cart.css
+++ b/flask/app/static/css/cart.css
@@ -32,6 +32,7 @@ body {
     padding: 20px;
     justify-content: space-between;
     border-bottom: 2px solid var(--border--color);
+    margin-bottom: 2%;
 }
 
 .top-bar span{
@@ -46,6 +47,10 @@ body {
     font-size: 3rem;
     overflow-y: auto;       
     height: calc(100vh - 160px);  
+}
+
+.item-container {
+  background: var(--buttonbg--color);
 }
 
 .bot-bar {
@@ -176,4 +181,7 @@ input[type=number] {
   font-size: 1.1rem;
   border: none;
   box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
+.text {
+  color: var(--text--color);
 }
