change gmail to email

--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -40,7 +40,7 @@
                     {% endif %}
                     <div>
                         <div class="name">{{ user.Fname }} {{ user.Lname }}</div>
-                        <div class="username">{{ user.gmail }}</div>
+                        <div class="username">{{ user.email }}</div>
                     </div>
                 </div>
                 
