--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -28,9 +28,9 @@
                 <span class="welcome-message">Welcome!<br></span>
                 <span>{{ current_user.Fname}} {{ current_user.Lname }}</span>
             </div>
-            <form>
+            <!-- <form>
                 <input id="logout" type="button" value="logout">
-            </form>
+            </form> -->
         </div>
         
         <div class="action-wrapper">
