--- a/flask/app/templates/notification.html
+++ b/flask/app/templates/notification.html
@@ -19,15 +19,12 @@
         }
     </script>
     <div class="top-bar">
-    	<div class="back">
-        	<a href="{{ url_for('homepage') }}">
-                <span class="material-icons">arrow_back_ios_new</span> 
-            </a>
-    	</div>
-    	<div class="category">
-        	<span>Notification</span>
-    	</div>
-        <div></div>
+        <a href="{{ url_for('homepage') }}">
+            <span class="material-icons">arrow_back_ios</span>
+        </a>
+        <div class="center">
+            <span>Notification</span>
+        </div>
     </div>
 
     <div class="notification-list">
