--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -36,7 +36,7 @@ body {
     flex: 1;
     text-align: center;
     margin: 0;
-    font-size: 18px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--text--color);
 }
