--- a/flask/app/templates/setting.html
+++ b/flask/app/templates/setting.html
@@ -27,7 +27,45 @@
         </div>
     </div>
 
-    <!-- กด card item แล้ว drop down ของที่เบิก -->
+    <div class="profile">
+        <div class="profile-circle">
+            {% if current_user.profile_pic %}
+                <img src="{{ current_user.profile_pic }}"  class="profile-img">
+            {% else %}
+                <div class="user-icon">{{ current_user.Fname[0].upper() }}</div>
+            {% endif %}
+        </div>
+        <div class="profile-text">
+            <span class="welcome-message">Hi!<br></span>
+            <span>{{ current_user.Fname}} {{ current_user.Lname }}</span>
+        </div>
+    </div>
+    
+    <div class="action">
+        <div class="action-btn" id="contact">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M320-400h320v-22q0-44-44-71t-116-27q-72 0-116 27t-44 71v22Zm160-160q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560ZM80-80v-720q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v480q0 33-23.5 56.5T800-240H240L80-80Z"/></svg>
+            <span>Contact Admin</span>
+        </div>
+
+        <div class="action-btn" id="logout-bar">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z"/></svg>
+            <span id="logout" type="button" value="logout" onclick="confirmAction()">Logout</span>
+        </div>
+    </div>
 </body>
 </html>
+
+<script>
+    function confirmAction() {
+        if (window.confirm("Are you sure you want to Logout?")) {
+            window.location.href = "logout";
+        }
+    }
+
+    const logoutButton = document.querySelector('#logout')
+    logoutButton.addEventListener("click", (event) => {
+        event.preventDefault();
+        confirmAction();
+    });
+</script>
 
